Scripts: WITH_INNOBASE_STORAGE_ENGINE fix

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -363,6 +363,15 @@ IF(WITH_UNIT_TESTS)
  ENDIF()
 ENDIF()
 
+IF(WITH_INNOBASE_STORAGE_ENGINE)
+  SET(WITH_XTRADB_STORAGE_ENGINE OFF)
+  IF(PLUGIN_XTRADB STREQUAL STATIC)
+    SET(PLUGIN_XTRADB DYNAMIC)
+  ENDIF()
+ELSE()
+  SET(WITH_XTRADB_STORAGE_ENGINE ON)
+ENDIF()
+
 SET (MYSQLD_STATIC_PLUGIN_LIBS "" CACHE INTERNAL "")
 
 # mariadb_connector_c fetches submodules which is useful for plugins
