--- a/storage/xtradb/CMakeLists.txt
+++ b/storage/xtradb/CMakeLists.txt
@@ -501,6 +501,7 @@ SET(INNOBASE_SOURCES
 
 MYSQL_ADD_PLUGIN(xtradb ${INNOBASE_SOURCES} STORAGE_ENGINE
   RECOMPILE_FOR_EMBEDDED
+  MODULE_OUTPUT_NAME ha_innodb
   LINK_LIBRARIES
     ${ZLIB_LIBRARY}
     ${CRC32_VPMSUM_LIBRARY}
