Scripts: WITH_INNOBASE_STORAGE_ENGINE fix 2 (590af2a4fda6e76b12b58b514099af408dcc40df)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -364,12 +364,11 @@ IF(WITH_UNIT_TESTS)
 ENDIF()
 
 IF(WITH_INNOBASE_STORAGE_ENGINE)
-  SET(WITH_XTRADB_STORAGE_ENGINE OFF)
-  IF(PLUGIN_XTRADB STREQUAL STATIC)
-    SET(PLUGIN_XTRADB DYNAMIC)
-  ENDIF()
+  SET(PLUGIN_INNOBASE STATIC CACHE STRING "" FORCE)
+  SET(PLUGIN_XTRADB DYNAMIC CACHE STRING "" FORCE)
 ELSE()
-  SET(WITH_XTRADB_STORAGE_ENGINE ON)
+  SET(PLUGIN_INNOBASE DYNAMIC CACHE STRING "" FORCE)
+  SET(PLUGIN_XTRADB STATIC CACHE STRING "" FORCE)
 ENDIF()
 
 SET (MYSQLD_STATIC_PLUGIN_LIBS "" CACHE INTERNAL "")
