IB: 0.2 part II
* moved vers_notify_vtq() to commit phase;
* low_level insert (load test passed);
* rest of SYS_VTQ columns filled: COMMIT_TS, CONCURR_TRX;
* savepoints support;
* I_S.INNODB_SYS_VTQ adjustments:
  - limit to I_S_SYS_VTQ_LIMIT(10000) of most recent records;
  - CONCURR_TRX limit to I_S_MAX_CONCURR_TRX(100) with '...' truncation marker;
  - TIMESTAMP fields show fractions of seconds.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -365,7 +365,7 @@ ENDIF()
 
 IF(WITH_INNOBASE_STORAGE_ENGINE)
   SET(PLUGIN_INNOBASE STATIC CACHE STRING "" FORCE)
-  SET(PLUGIN_XTRADB DYNAMIC CACHE STRING "" FORCE)
+  SET(PLUGIN_XTRADB NO CACHE STRING "" FORCE)
 ELSE()
   SET(PLUGIN_INNOBASE DYNAMIC CACHE STRING "" FORCE)
   SET(PLUGIN_XTRADB STATIC CACHE STRING "" FORCE)
