Scripts: debug and release configurations for travis build
Closes #72

--- a/.travis.yml
+++ b/.travis.yml
@@ -62,6 +62,11 @@ addons:
       - libcrack2-dev
       - libjemalloc-dev
       - devscripts # implicit for any build on Ubuntu
+      - libtcmalloc-minimal4
+
+env:
+  - BUILD_TYPE=-DCMAKE_BUILD_TYPE=Debug -DWITH_JEMALLOC=yes -DSECURITY_HARDENED=no -DWITH_PIC=no -DCMAKE_CXX_FLAGS_DEBUG="-g -O0" -DCMAKE_C_FLAGS_DEBUG="-g -O0" "${TRAVIS_BUILD_DIR}"
+  - BUILD_TYPE=-DCMAKE_BUILD_TYPE=Release -DWITH_JEMALLOC=yes -DSECURITY_HARDENED=yes -DWITH_PIC=no -DCMAKE_CXX_FLAGS_DEBUG="-g -O2" -DCMAKE_C_FLAGS_DEBUG="-g -O2" "${TRAVIS_BUILD_DIR}"
 
 # libsnappy-dev # https://github.com/travis-ci/apt-package-whitelist/issues/3880
 # liblzma-dev # https://github.com/travis-ci/apt-package-whitelist/issues/3879
@@ -72,7 +77,4 @@ script:
   - export MYSQL_BUILD_CC=/usr/bin/gcc-${GCC_VERSION} MYSQL_BUILD_CXX=/usr/bin/g++-${GCC_VERSION}
   - ${MYSQL_BUILD_CC} --version ; ${MYSQL_BUILD_CXX} --version
   - cd "${TRAVIS_BUILD_DIR}"
-  - cmake -DCMAKE_BUILD_TYPE=Debug -DWITH_INNOBASE_STORAGE_ENGINE=yes -DWITH_JEMALLOC=yes -DSECURITY_HARDENED=no -DWITH_PIC=no -DCMAKE_CXX_FLAGS_DEBUG="-g -O0" -DCMAKE_C_FLAGS_DEBUG="-g -O0"
-  - make -j $(grep -c processor /proc/cpuinfo)
-  - cd ./mysql-test
-  - ./mtr --suite=versioning --force --max-test-fail=0
+  - "LD_PRELOAD=/usr/lib/libtcmalloc_minimal.so.4 cmake -DWITH_INNOBASE_STORAGE_ENGINE=yes $BUILD_TYPE && LD_PRELOAD=/usr/lib/libtcmalloc_minimal.so.4 make -j $(grep -c processor /proc/cpuinfo) && cd ./mysql-test && ./mtr --suite=versioning --force --max-test-fail=0"
