--- a/.travis.yml
+++ b/.travis.yml
@@ -63,10 +63,12 @@ addons:
       - libjemalloc-dev
       - devscripts # implicit for any build on Ubuntu
       - libtcmalloc-minimal4
+      - valgrind
 
 env:
-  - BUILD_TYPE=-DCMAKE_BUILD_TYPE=Debug -DWITH_JEMALLOC=yes -DSECURITY_HARDENED=no -DWITH_PIC=no -DCMAKE_CXX_FLAGS_DEBUG="-g -O0" -DCMAKE_C_FLAGS_DEBUG="-g -O0" "${TRAVIS_BUILD_DIR}"
-  - BUILD_TYPE=-DCMAKE_BUILD_TYPE=Release -DWITH_JEMALLOC=yes -DSECURITY_HARDENED=yes -DCMAKE_CXX_FLAGS_RELEASE="-g" -DCMAKE_C_FLAGS_RELEASE="-g" "${TRAVIS_BUILD_DIR}"
+  - BUILD_TYPE="-DCMAKE_BUILD_TYPE=Debug -DWITH_JEMALLOC=yes -DSECURITY_HARDENED=no -DWITH_PIC=no ${TRAVIS_BUILD_DIR}" MTR_FLAGS=""
+  - BUILD_TYPE="-DCMAKE_BUILD_TYPE=Debug -DSECURITY_HARDENED=no -DWITH_PIC=no ${TRAVIS_BUILD_DIR}" MTR_FLAGS="--valgrind --valgrind-option=--show-reachable=no --valgrind-option=--num-callers=120"
+  - BUILD_TYPE="-DCMAKE_BUILD_TYPE=RelWithDebInfo -DWITH_JEMALLOC=yes -DSECURITY_HARDENED=yes ${TRAVIS_BUILD_DIR}" MTR_FLAGS=""
 
 # libsnappy-dev # https://github.com/travis-ci/apt-package-whitelist/issues/3880
 # liblzma-dev # https://github.com/travis-ci/apt-package-whitelist/issues/3879
@@ -77,4 +79,4 @@ script:
   - export MYSQL_BUILD_CC=/usr/bin/gcc-${GCC_VERSION} MYSQL_BUILD_CXX=/usr/bin/g++-${GCC_VERSION}
   - ${MYSQL_BUILD_CC} --version ; ${MYSQL_BUILD_CXX} --version
   - cd "${TRAVIS_BUILD_DIR}"
-  - "LD_PRELOAD=/usr/lib/libtcmalloc_minimal.so.4 cmake -DWITH_INNOBASE_STORAGE_ENGINE=yes $BUILD_TYPE && LD_PRELOAD=/usr/lib/libtcmalloc_minimal.so.4 make -j $(grep -c processor /proc/cpuinfo) && cd ./mysql-test && ./mtr --suite=versioning --force --max-test-fail=0"
+  - "LD_PRELOAD=/usr/lib/libtcmalloc_minimal.so.4 cmake -DWITH_INNOBASE_STORAGE_ENGINE=yes $BUILD_TYPE && LD_PRELOAD=/usr/lib/libtcmalloc_minimal.so.4 make -j $(grep -c processor /proc/cpuinfo) && cd ./mysql-test && ./mtr $MTR_FLAGS --suite=versioning --force --max-test-fail=0"
