IB: moved VTQ funcs to separate file

--- a/storage/innobase/CMakeLists.txt
+++ b/storage/innobase/CMakeLists.txt
@@ -149,7 +149,8 @@ SET(INNOBASE_SOURCES
 	ut/ut0ut.cc
 	ut/ut0vec.cc
 	ut/ut0wqueue.cc
-	ut/ut0timer.cc)
+	ut/ut0timer.cc
+	vers/vers0vtq.cc)
 
 IF(WITH_INNODB)
   # Legacy option
