--- a/plugin/auth_ed25519/CMakeLists.txt
+++ b/plugin/auth_ed25519/CMakeLists.txt
@@ -14,8 +14,12 @@ SET(REF10_SOURCES
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
 
 ADD_CONVENIENCE_LIBRARY(ref10 ${REF10_SOURCES})
+IF(MSVC)
+   # Silence conversion (integer truncantion) warnings from reference code
+  SET_TARGET_PROPERTIES(ref10 PROPERTIES COMPILE_FLAGS "/wd4244 /wd4146")
+ENDIF()
 
-MYSQL_ADD_PLUGIN(auth_ed25519 server_ed25519.c ${REF10_SOURCES} MODULE_ONLY)
+MYSQL_ADD_PLUGIN(auth_ed25519 server_ed25519.c MODULE_ONLY LINK_LIBRARIES ref10)
 
 MYSQL_ADD_PLUGIN(client_ed25519 client_ed25519.c MODULE_ONLY
   CLIENT LINK_LIBRARIES mysys_ssl ref10 COMPONENT ClientPlugins)
