--- a/sql/sql_builtin.cc.in
+++ b/sql/sql_builtin.cc.in
@@ -26,7 +26,7 @@ extern
 builtin_maria_plugin 
   @mysql_mandatory_plugins@ @mysql_optional_plugins@
   builtin_maria_binlog_plugin,
-#ifdef WITH_WSREP
+#ifdef WITH_WSREP_NO
   builtin_maria_wsrep_plugin,
 #endif /* WITH_WSREP */
  builtin_maria_mysql_password_plugin;
@@ -39,7 +39,7 @@ struct st_maria_plugin *mysql_optional_plugins[]=
 struct st_maria_plugin *mysql_mandatory_plugins[]=
 {
   builtin_maria_binlog_plugin, builtin_maria_mysql_password_plugin,
-#ifdef WITH_WSREP
+#ifdef WITH_WSREP_NO
   builtin_maria_wsrep_plugin,
 #endif /* WITH_WSREP */
   @mysql_mandatory_plugins@ 0
