revert travis changes
because they're specific to natsys github repo

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,6 @@
 # vim ft=yaml
 # travis-ci.org definition
 
-branches:
-  only:
-    - natsys/trunk
-
 # non-container builds don't have enough RAM to reliably compile
 sudo: required
 dist: trusty
@@ -21,7 +17,6 @@ env:
     - GCC_VERSION=4.8
     - GCC_VERSION=5
     - GCC_VERSION=6
-
 addons:
   apt:
     sources:
@@ -33,6 +28,10 @@ addons:
 # https://github.com/travis-ci/apt-source-whitelist/pull/288
 # https://github.com/travis-ci/apt-source-whitelist/pull/309
     packages: # make sure these match debian/control contents
+      - gcc-5
+      - g++-5
+      - gcc-6
+      - g++-6
       - bison
       - chrpath
       - cmake
@@ -59,13 +58,6 @@ addons:
       - libcrack2-dev
       - libjemalloc-dev
       - devscripts # implicit for any build on Ubuntu
-      - libtcmalloc-minimal4
-      - valgrind
-
-env:
-  - BUILD_TYPE="-DCMAKE_BUILD_TYPE=Debug -DWITH_JEMALLOC=yes -DSECURITY_HARDENED=no -DWITH_PIC=no ${TRAVIS_BUILD_DIR}" MTR_FLAGS=""
-  - BUILD_TYPE="-DCMAKE_BUILD_TYPE=Debug -DSECURITY_HARDENED=no -DWITH_PIC=no ${TRAVIS_BUILD_DIR}" MTR_FLAGS="--valgrind --valgrind-option=--show-reachable=no --valgrind-option=--num-callers=120"
-  - BUILD_TYPE="-DCMAKE_BUILD_TYPE=RelWithDebInfo -DWITH_JEMALLOC=yes -DSECURITY_HARDENED=yes ${TRAVIS_BUILD_DIR}" MTR_FLAGS=""
 
 # libsnappy-dev # https://github.com/travis-ci/apt-package-whitelist/issues/3880
 # liblzma-dev # https://github.com/travis-ci/apt-package-whitelist/issues/3879
@@ -73,6 +65,16 @@ env:
 # libsystemd-daemon-dev # https://github.com/travis-ci/apt-package-whitelist/issues/3882
 
 script:
-  - ${CC} --version ; ${CXX} --version
+  - export MYSQL_BUILD_CC=/usr/bin/gcc-${GCC_VERSION} MYSQL_BUILD_CXX=/usr/bin/g++-${GCC_VERSION}
+  - ${MYSQL_BUILD_CC} --version ; ${MYSQL_BUILD_CXX} --version
   - cd "${TRAVIS_BUILD_DIR}"
-  - "LD_PRELOAD=/usr/lib/libtcmalloc_minimal.so.4 cmake -DWITH_INNOBASE_STORAGE_ENGINE=yes $BUILD_TYPE && LD_PRELOAD=/usr/lib/libtcmalloc_minimal.so.4 make -j $(grep -c processor /proc/cpuinfo) && cd ./mysql-test && ./mtr $MTR_FLAGS --suite=versioning --force --max-test-fail=0"
+  - env DEB_BUILD_OPTIONS="parallel=3" debian/autobake-deb.sh;
+
+notifications:
+  irc:
+    channels:
+      - "chat.freenode.net#maria"
+    on_success: never # [always|never|change]
+    on_failure: never
+    template:
+      - "%{repository}/%{branch} (%{commit} - %{author}): %{build_url}: %{message}"
