--- a/extra/mariabackup/CMakeLists.txt
+++ b/extra/mariabackup/CMakeLists.txt
@@ -30,7 +30,7 @@ ENDIF()
 
 INCLUDE_DIRECTORIES(
   ${CMAKE_SOURCE_DIR}/include
-  ${CMAKE_SOURCE_DIR}/storage/xtradb/include
+  ${CMAKE_SOURCE_DIR}/storage/innodb/include
   ${CMAKE_SOURCE_DIR}/sql
   ${CMAKE_CURRENT_SOURCE_DIR}/quicklz
   ${CMAKE_CURRENT_SOURCE_DIR}
@@ -74,9 +74,9 @@ MYSQL_ADD_EXECUTABLE(mariabackup
   backup_mysql.cc
   backup_copy.cc
   encryption_plugin.cc
-  ${PROJECT_SOURCE_DIR}/libmysql/libmysql.c
   ${PROJECT_SOURCE_DIR}/sql/net_serv.cc
   ${NT_SERVICE_SOURCE}
+  ${PROJECT_SOURCE_DIR}/libmysqld/libmysql.c
   COMPONENT backup
   )
 
