MW-413 - fixes for galera mtr suite problems
Pushed fixed / recorded resutl set for tests:
galera_log_bin
galera_as_slave
galera_as_slave_autoinc
galera_as_slave_gtid_replicate_do_db
galera_as_slave_gtid_replicate_do_db_cc
galera_as_slave_nonprim
galera_log_bin
rpl_row_annotate

--- a/mysql-test/suite/galera/galera_2nodes_as_slave.cnf
+++ b/mysql-test/suite/galera/galera_2nodes_as_slave.cnf
@@ -9,7 +9,8 @@
 binlog-format=row
 
 [mysqld.1]
-log-bin
+log-bin=master-bin
+log-bin-index=master-bin
 server-id=1
 
 [mysqld.2]
@@ -19,7 +20,8 @@ server-id=1
 
 wsrep-on=1
 
-log-bin
+log-bin=master-bin
+log-bin-index=master-bin
 log-slave-updates
 
 innodb-autoinc-lock-mode=2
@@ -43,7 +45,8 @@ server-id=2
 
 wsrep-on=1
 
-log-bin
+log-bin=master-bin
+log-bin-index=master-bin
 log-slave-updates
 
 innodb-autoinc-lock-mode=2
