--- a/mysql-test/suite/galera/galera_3nodes_as_slave.cnf
+++ b/mysql-test/suite/galera/galera_3nodes_as_slave.cnf
@@ -8,14 +8,17 @@
 [mysqld]
 log-bin
 binlog-format=row
+innodb-lock-schedule-algorithm=fcfs
 
 [mysqld.1]
 server-id=1
+innodb-lock-schedule-algorithm=fcfs
 
 [mysqld.2]
 #galera_port=@OPT.port
 #ist_port=@OPT.port
 #sst_port=@OPT.port
+innodb-lock-schedule-algorithm=fcfs
 
 log-slave-updates
 
@@ -37,6 +40,7 @@ server-id=2
 #galera_port=@OPT.port
 #ist_port=@OPT.port
 #sst_port=@OPT.port
+innodb-lock-schedule-algorithm=fcfs
 
 log-slave-updates
 
@@ -58,6 +62,7 @@ server-id=3
 #galera_port=@OPT.port
 #ist_port=@OPT.port
 #sst_port=@OPT.port
+innodb-lock-schedule-algorithm=fcfs
 
 log-slave-updates
 
