--- a/mysql-test/suite/wsrep/my.cnf
+++ b/mysql-test/suite/wsrep/my.cnf
@@ -3,6 +3,7 @@
 
 [mysqld]
 wsrep-on=1
+innodb-lock-schedule-algorithm=fcfs
 
 [mysqld.1]
 #galera_port=@OPT.port
@@ -10,3 +11,4 @@ wsrep-on=1
 #sst_port=@OPT.port
 wsrep_provider_options='base_port=@mysqld.1.#galera_port;gcache.size=10M'
 wsrep_cluster_address='not empty but invalid'
+
