--- a/mysql-test/suite/galera/galera_2nodes.cnf
+++ b/mysql-test/suite/galera/galera_2nodes.cnf
@@ -10,6 +10,7 @@ wsrep-provider=@ENV.WSREP_PROVIDER
 wsrep_node_address=127.0.0.1
 # enforce read-committed characteristics across the cluster
 wsrep-sync-wait=15
+innodb-lock-schedule-algorithm=fcfs
 
 [mysqld.1]
 #galera_port=@OPT.port
@@ -19,6 +20,7 @@ wsrep-cluster-address=gcomm://
 wsrep_provider_options='repl.causal_read_timeout=PT90S;base_port=@mysqld.1.#galera_port;evs.suspect_timeout=PT10S;evs.inactive_timeout=PT30S;evs.install_timeout=PT15S;gcache.size=10M'
 wsrep_node_incoming_address=127.0.0.1:@mysqld.1.port
 wsrep_sst_receive_address='127.0.0.1:@mysqld.1.#sst_port'
+innodb-lock-schedule-algorithm=fcfs
 
 [mysqld.2]
 #galera_port=@OPT.port
@@ -30,6 +32,7 @@ wsrep_provider_options='repl.causal_read_timeout=PT90S;base_port=@mysqld.2.#gale
 # enforce read-committed characteristics across the cluster
 wsrep_causal_reads=ON
 wsrep_sync_wait = 15
+innodb-lock-schedule-algorithm=fcfs
 
 wsrep_node_address=127.0.0.1
 wsrep_sst_receive_address=127.0.0.2:@mysqld.2.#sst_port
