--- a/mysql-test/suite/galera/galera_2nodes_as_master_with_repl_filter.cnf
+++ b/mysql-test/suite/galera/galera_2nodes_as_master_with_repl_filter.cnf
@@ -7,6 +7,7 @@
 
 [mysqld]
 default-storage-engine=InnoDB
+innodb-lock-schedule-algorithm=fcfs
 
 [mysqld.1]
 server-id=1
@@ -16,6 +17,7 @@ log_slave_updates
 gtid-mode=on
 enforce-gtid-consistency=true
 event-scheduler=1
+innodb-lock-schedule-algorithm=fcfs
 
 wsrep_provider=@ENV.WSREP_PROVIDER
 wsrep_cluster_address='gcomm://'
@@ -42,6 +44,7 @@ log_slave_updates
 gtid-mode=on
 enforce-gtid-consistency=true
 event-scheduler=1
+innodb-lock-schedule-algorithm=fcfs
 
 wsrep_provider=@ENV.WSREP_PROVIDER
 wsrep_cluster_address='gcomm://127.0.0.1:@mysqld.1.#galera_port'
@@ -69,6 +72,7 @@ log_slave_updates
 gtid-mode=on
 enforce-gtid-consistency=true
 event-scheduler=1
+innodb-lock-schedule-algorithm=fcfs
 
 [ENV]
 NODE_MYPORT_1= @mysqld.1.port
