--- a/mysql-test/suite/galera/galera_4nodes.cnf
+++ b/mysql-test/suite/galera/galera_4nodes.cnf
@@ -11,6 +11,7 @@ wsrep_node_address=127.0.0.1
 # enforce read-committed characteristics across the cluster
 wsrep-causal-reads=ON
 wsrep-sync-wait=15
+innodb-lock-schedule-algorithm=fcfs
 
 [mysqld.1]
 #galera_port=@OPT.port
@@ -20,6 +21,7 @@ wsrep-cluster-address=gcomm://
 wsrep_provider_options='base_port=@mysqld.1.#galera_port;gcache.size=10M'
 wsrep_node_incoming_address=127.0.0.1:@mysqld.1.port
 wsrep_sst_receive_address='127.0.0.1:@mysqld.1.#sst_port'
+innodb-lock-schedule-algorithm=fcfs
 
 [mysqld.2]
 #galera_port=@OPT.port
@@ -29,6 +31,7 @@ wsrep_cluster_address='gcomm://127.0.0.1:@mysqld.1.#galera_port'
 wsrep_provider_options='base_port=@mysqld.2.#galera_port;gcache.size=10M'
 wsrep_node_incoming_address=127.0.0.1:@mysqld.2.port
 wsrep_sst_receive_address='127.0.0.1:@mysqld.2.#sst_port'
+innodb-lock-schedule-algorithm=fcfs
 
 
 [mysqld.3]
@@ -39,6 +42,7 @@ wsrep_cluster_address='gcomm://127.0.0.1:@mysqld.1.#galera_port'
 wsrep_provider_options='base_port=@mysqld.3.#galera_port;gcache.size=10M'
 wsrep_node_incoming_address=127.0.0.1:@mysqld.3.port
 wsrep_sst_receive_address='127.0.0.1:@mysqld.3.#sst_port'
+innodb-lock-schedule-algorithm=fcfs
 
 
 [mysqld.4]
@@ -49,6 +53,7 @@ wsrep_cluster_address='gcomm://127.0.0.1:@mysqld.1.#galera_port'
 wsrep_provider_options='base_port=@mysqld.4.#galera_port;gcache.size=10M'
 wsrep_node_incoming_address=127.0.0.1:@mysqld.4.port
 wsrep_sst_receive_address='127.0.0.1:@mysqld.4.#sst_port'
+innodb-lock-schedule-algorithm=fcfs
 
 [ENV]
 NODE_MYPORT_1= @mysqld.1.port
